# fevm-eth-compliance-test

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  readme.md  usecase-runner-v2.sh  usecase-runner.sh  usecase.txt
src/: cmd.rs
src/common/: bits.rs  builtin.rs  error.rs  merkle_trie.rs  mod.rs  skip.rs  tester.rs
src/statetest/: cmd.rs  executor.rs  mod.rs  runner.rs
src/statetest/models/: deserializer.rs  mod.rs  spec.rs
test-vectors/: skip_test.json
