[package]
name = "evm_eth_compliance"
description = "FEVM Eth Compliance Test"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["shamb0", "r.raajey@gmail.com"]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]
publish = false

[dependencies]
anyhow = "1.0.47"
bytes = "1.1"
num-traits = "0.2"
wat = "1.0.51"
ruint = { version = "1.7.0", features = ["rlp", "serde"] }
hex = { version = "0.4" }
fixed-hash = { version = "0.8", default-features = false, features = ["rustc-hex"]}
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
primitive-types = { version = "0.12", features = ["rlp", "serde"] }
hash-db = "0.15"
plain_hasher = "0.2"
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }
triehash = "0.8"
hex-literal = "0.3"
derive_more = "0.99"
lazy_static = "1.4.0"
structopt = "0.3"
arrayref = "0.3"
libsecp256k1 = "0.7.0"
thiserror = "1.0"
num_cpus = "1.13.0"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8.5"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
walkdir = "2.3"
multihash = { version = "0.16.1", default-features = false }

fvm = { version = "3.0.0-rc.1", default-features = false, features = ["testing"] }
fvm_ipld_kamt = { version = "0.2.0" }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"
fvm_shared = { version = "3.0.0-alpha.20", default-features = false }
fvm_integration_tests = { version = "3.0.0-alpha.3" }

actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/shamb0/builtin-actors", branch = "shamb0/mirror-next" }
fil_actor_evm = { package = "fil_actor_evm", git = "https://github.com/shamb0/builtin-actors", branch = "shamb0/mirror-next" }
fil_actors_evm_shared = { package = "fil_actors_evm_shared", git = "https://github.com/shamb0/builtin-actors", branch = "shamb0/mirror-next" }
fil_actor_eam = { package = "fil_actor_eam", git = "https://github.com/shamb0/builtin-actors", branch = "shamb0/mirror-next" }
fil_actors_runtime = { package = "fil_actors_runtime", git = "https://github.com/shamb0/builtin-actors", branch = "shamb0/mirror-next", features = ["test_utils"] }


[dependencies.wasmtime]
version = "2.0.2"
default-features = false
features = ["cranelift", "parallel-compilation"]

#[patch.crates-io]
#fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }
#fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }
#fvm_ipld_hamt = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }
#fvm_ipld_kamt = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }
#fvm_ipld_amt = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }
#fvm_ipld_bitfield = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }
#fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }
#fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }
#fvm_integration_tests = { git = "https://github.com/filecoin-project/ref-fvm", branch = "master" }

# [patch."https://github.com/filecoin-project/builtin-actors"]
# fil_builtin_actors_bundle = { path = "../builtin-actors" }
# fil_actors_runtime = { path = "../builtin-actors/runtime" }
# fil_actor_evm = { path = "../builtin-actors/actors/evm" }
# fil_actor_eam = { path = "../builtin-actors/actors/eam" }

#[patch."https://github.com/filecoin-project/builtin-actors"]
#fil_builtin_actors_bundle = { path = "../builtin-actors-v2/builtin-actors" }
#fil_actors_runtime = { path = "../builtin-actors-v2/builtin-actors/runtime" }
#fil_actor_evm = { path = "../builtin-actors-v2/builtin-actors/actors/evm" }
#fil_actor_eam = { path = "../builtin-actors-v2/builtin-actors/actors/eam" }
